# sovereign-taxi-hexagonal-inference-engine

./: .gitignore  .pre-commit-config.yaml  New_Learnings_Skills_Gained.md  README.md  justfile  pyproject.toml  pyrightconfig.json
.github/workflows/: ci-sovereign-guard.yml
notebooks/: duration-prediction.ipynb
src/core/domain/: __init__.py  entities.py  exceptions.py  model.py  value_objects.py
tests/: test_trip_model.py
tests/factories/: trip_factory.py
tests/property_based/: test_entities_pbt.py
